--- a/public/navigation&footer/navigation.hbs
+++ b/public/navigation&footer/navigation.hbs
@@ -25,7 +25,7 @@
 </head>
 <body>
 <nav>
-    <a href="index.html"><img src="bvm.png" alt="logo"></a>
+    <a href="/"><img src="bvm.png" alt="logo"></a>
     <div class="nav-links" id="navLinks">
         <i class="fa fa-times" id="close" onclick="hideMenu()"></i>
         
