--- a/views/about.hbs
+++ b/views/about.hbs
@@ -34,7 +34,7 @@
         <div >
             <h2>OUR INSTITUTE IS BELONG TO A TOP UNIVERCITY OF INDIA.</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur est quibusdam ratione cupiditate cum quia!</p>
-            <a href="#">EXPLORE NOW</a>
+            <a href="contact">EXPLORE NOW</a>
         </div>
         <img src="about.jpg" alt="">
     </section>
