--- a/views/index.hbs
+++ b/views/index.hbs
@@ -136,7 +136,7 @@
        </div>
        <div class="enroll">
            <h1>Enroll for various courses that we had offered</h1>
-            <a href="#">CONTACT US</a>
+            <a href="contact">CONTACT US</a>
         </div>
     </section> 
     {{>footer}}
